# scdummyloc

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  readthedoc.yaml
.github/workflows/: release.yml
app/scdummyloc/: scdummyloc.py
apps/: CMakeLists.txt
apps/scdummyloc/: CMakeLists.txt  initd.py  scdummyloc.py
apps/scdummyloc/description/: scdummyloc.xml
doc/: CMakeLists.txt  build-doc.py
doc/apps/: scdummyloc.rst  scdummyloc.xml
doc/base/: contrib.rst  install.rst
doc/templates/: apps.rst  conf.py  index.rst
